(base.html): Fix top-bar breakdown on small but not mobile screen sizes.

--- a/htdocs/sass/_overrides.scss
+++ b/htdocs/sass/_overrides.scss
@@ -40,3 +40,10 @@ button, .button {
         &.success { background-color: scale-color($success-color, $lightness: $button-function-factor); }
     }
 }
+
+// Override navbars default height because it casus display problems on medium screens
+@media #{$medium-up} {
+    .top-bar {
+        height: auto;
+    }
+}
