--- a/htdocs/sass/nav/custom.scss
+++ b/htdocs/sass/nav/custom.scss
@@ -24,7 +24,6 @@
     background-color: white;
     border-bottom: 5px solid #027BBB;
     position: absolute;
-    top: 45px;
     z-index: 10000;
     -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
